envoy/least_connection/envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080

    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: default
            virtual_hosts:

            - name: default
              domains: ["*"]
              routes:

              - match:
                  prefix: "/"
                route:
                  cluster: default
                  retry_policy:
                    retry_on: "5xx"
                    num_retries: 10
                    per_try_timeout: 2s
                    
          http_filters:
          - name: envoy.router

  clusters:
    - name: "default"
      connect_timeout: "30s"
      type: "strict_dns"
      lb_policy: "LEAST_REQUEST"
      hosts:
        - socket_address:
            address: app_v1
            port_value: 8080
        - socket_address:
            address: app_v2
            port_value: 8080
